--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .cart-animar { animation: cartJump 0.4s ease-out; }
     </style>
 </head>
-
+<meta name="google-site-verification" content="BUuV7tgYN1Ynijj02QBJpqrEzME3QVqt_vqugegLoi4" />
 <body>
 
     <div id="preloader">
