--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="BUuV7tgYN1Ynijj02QBJpqrEzME3QVqt_vqugegLoi4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Florería Antonia - Flores que enamoran</title>
+    <title>Florería Antonia | Ramos y Flores a Domicilio en La Serena</title>
+    <meta name="description" content="Florería Antonia en La Serena. Ramos de rosas, girasoles y arreglos personalizados con envío a domicilio rápido en toda la región. ¡Haz tu pedido por WhatsApp!">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <style>
         /* PUNTO 2: Animación de salto para el carrito */
