--- a/catalogo.html
+++ b/catalogo.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Florería Antonia - Flores que enamoran</title>
+    <title>Catálogo de Flores | Florería Antonia La Serena</title>
+    <meta name="description" content="Explora nuestro catálogo de ramos, cajas de rosas y arreglos florales en La Serena. Precios actualizados y pedidos directos por WhatsApp con entrega hoy mismo.">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
