--- a/catalogo.html
+++ b/catalogo.html
@@ -163,7 +163,7 @@
             {id: 22, nombre: "Arreglo de Rosas y Lilium", precio: 22000, img: "img/condo1.png", categoria: "Condolencias"},
             {id: 23, nombre: "Arreglo de Rosas y Lilium", precio: 22000, img: "img/condo2.png", categoria: "Condolencias"},
             {id: 24, nombre: "Arreglo Talla L", precio: 30000, img: "img/condo3.png", categoria: "Condolencias"},
-            {id: 25, nombre: "Arreglo 5 varas", precio: 20000, img: "img/condo4.png", categoria: "Condolencias"},
+            {id: 25, nombre: "Arreglo 5 varas", precio: 20000, img: "img/coronas-funebres.png", categoria: "Condolencias"},
             {id: 26, nombre: "Arreglo 10 varas + follaje", precio: 30000, img: "img/condo5.png", categoria: "Condolencias"},
             {id: 27, nombre: "Pack 3 arreglos en tono blanco", precio: 85000, img: "img/condo6.png", categoria: "Condolencias"},
             {id:28, nombre: "Arreglo 8 varas + Follaje", precio: 25000, img: "img/condo7.png", categoria: "Condolencias"},
