--- a/catalogo.html
+++ b/catalogo.html
@@ -157,7 +157,7 @@
             {id: 18, nombre: "Ramo de 15 rosas", precio: 45000, img: "img/detalle18.png", categoria: "Rosas"},
             {id: 19, nombre: "Ramo 4 rosas y 2 girasoles", precio: 14000, img: "img/detalle19.png", categoria: "Mixto"},
             {id: 20, nombre: "Ramo 8 rosas", precio: 25000, img: "img/detalle20.png", categoria: "Rosas"},
-            {id: 21, nombre: "Ramo Ferrero y flores surtidas", precio: 30000, img: "img/detalle21.png", categoria: "Mixto"}
+            {id: 21, nombre: "Ramo Ferrero y flores surtidas", precio: 30000, img: "img/regalos-de-cumpleaños.png", categoria: "Mixto"}
         ],
         condolencias: [
             {id: 22, nombre: "Arreglo de Rosas y Lilium", precio: 22000, img: "img/condo1.png", categoria: "Condolencias"},
