--- a/catalogo.html
+++ b/catalogo.html
@@ -168,7 +168,7 @@
             {id: 27, nombre: "Pack 3 arreglos en tono blanco", precio: 85000, img: "img/condo6.png", categoria: "Condolencias"},
             {id:28, nombre: "Arreglo 8 varas + Follaje", precio: 25000, img: "img/condo7.png", categoria: "Condolencias"},
             {id: 29, nombre: "Arreglo Talla L", precio: 30000, img: "img/condo8.png", categoria: "Condolencias"},
-            {id: 30, nombre: "Arreglo XL", precio: 40000, img: "img/condo9.png", categoria: "Condolencias"},
+            {id: 30, nombre: "Arreglo XL", precio: 40000, img: "img/flores-naturales.png", categoria: "Condolencias"},
             {id: 31, nombre: "Arreglo 8 varas + follaje", precio: 25000, img: "img/condo10.png", categoria: "Condolencias"},
         ],
         cajitas: [
