--- a/catalogo.html
+++ b/catalogo.html
@@ -187,7 +187,7 @@
             {id: 42, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri1.png", categoria: "Matrimonio"},
             {id: 43, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri2.png", categoria: "Matrimonio"},
             {id: 44, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri3.png", categoria: "Matrimonio"},
-            {id: 45, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri4.png", categoria: "Matrimonio"}
+            {id: 45, nombre: "Ramos 10 varas", precio: 35000, img: "img/ramos-florales.png", categoria: "Matrimonio"}
         ]
     };
 
