Fix image path for Ramo de 30 rosas

--- a/catalogo.html
+++ b/catalogo.html
@@ -153,7 +153,7 @@
             {id: 14, nombre: "Maxi Ramo Romántico 18 varas", precio: 48000, img: "img/detalle14.png", categoria: "Mixto"},
             {id: 15, nombre: "Ramo 8 rosas", precio: 25000, img: "img/detalle15.png", categoria: "Rosas"},
             {id: 16, nombre: "Ramo 12 rosas", precio: 35000, img: "img/detalle16.png", categoria: "Rosas"},
-            {id: 17, nombre: "Ramo de 30 rosas", precio: 75000, img: "img/regalos-para-parejas.png", categoria: "Rosas"},
+            {id: 17, nombre: "Ramo de 30 rosas", precio: 75000, img: "img/regalos-para-pareja.png", categoria: "Rosas"},
             {id: 18, nombre: "Ramo de 15 rosas", precio: 45000, img: "img/detalle18.png", categoria: "Rosas"},
             {id: 19, nombre: "Ramo 4 rosas y 2 girasoles", precio: 14000, img: "img/detalle19.png", categoria: "Mixto"},
             {id: 20, nombre: "Ramo 8 rosas", precio: 25000, img: "img/detalle20.png", categoria: "Rosas"},
