--- a/catalogo.html
+++ b/catalogo.html
@@ -149,7 +149,7 @@
             {id: 10, nombre: "Ramo Tulipanes y Rosas", precio: 30000, img: "img/detalle10.png", categoria: "Mixto"},
             {id: 11, nombre: "Ramo 6 girasoles grandes", precio: 18000, img: "img/detalle11.png", categoria: "Girasoles"},
             {id: 12, nombre: "Mini ramo tulipanes", precio: 10000, img: "img/detalle12.png", categoria: "Tulipanes"},
-            {id: 13, nombre: "Ramo mediano 8 varas", precio: 22000, img: "img/detale13.png", categoria: "Mixto"},
+            {id: 13, nombre: "Ramo mediano 8 varas", precio: 22000, img: "img/detalle13.png", categoria: "Mixto"},
             {id: 14, nombre: "Maxi Ramo Romántico 18 varas", precio: 48000, img: "img/flores-para-aniversario.png", categoria: "Mixto"},
             {id: 15, nombre: "Ramo 8 rosas", precio: 25000, img: "img/detalle15.png", categoria: "Rosas"},
             {id: 16, nombre: "Ramo 12 rosas", precio: 35000, img: "img/detalle16.png", categoria: "Rosas"},
