--- a/catalogo.html
+++ b/catalogo.html
@@ -166,7 +166,7 @@
             {id: 25, nombre: "Arreglo 5 varas", precio: 20000, img: "img/coronas-funebres.png", categoria: "Condolencias"},
             {id: 26, nombre: "Arreglo 10 varas + follaje", precio: 30000, img: "img/condo5.png", categoria: "Condolencias"},
             {id: 27, nombre: "Pack 3 arreglos en tono blanco", precio: 85000, img: "img/condo6.png", categoria: "Condolencias"},
-            {id:28, nombre: "Arreglo 8 varas + Follaje", precio: 25000, img: "img/condo7.png", categoria: "Condolencias"},
+            {id: 28, nombre: "Arreglo 8 varas + Follaje", precio: 25000, img: "img/condo7.png", categoria: "Condolencias"},
             {id: 29, nombre: "Arreglo Talla L", precio: 30000, img: "img/condo8.png", categoria: "Condolencias"},
             {id: 30, nombre: "Arreglo XL", precio: 40000, img: "img/flores-naturales.png", categoria: "Condolencias"},
             {id: 31, nombre: "Arreglo 8 varas + follaje", precio: 25000, img: "img/condo10.png", categoria: "Condolencias"},
@@ -181,13 +181,14 @@
             {id: 38, nombre: "Cajita Claveles", precio: 18000, img: "img/caja7.png", categoria: "Cajitas"},
             {id: 39, nombre: "Cajita Stitch mediano", precio: 30000, img: "img/caja8.png", categoria: "Cajitas"},
             {id: 40, nombre: "Cajita Angela y Rosa", precio: 30000, img: "img/caja9.png", categoria: "Cajitas"},
-            {id: 41, nombre: "Cajita Stitch y rosas + chocolate", precio: 35000, img: "img/caja10.png", categoria: "Cajitas"}
+            {id: 41, nombre: "Cajita Stitch y rosas + chocolate", precio: 35000, img: "img/caja10.png", categoria: "Cajitas"},
+            {id: 42, nombre: "Cajita Stitch y rosas + chocolate", precio: 35000, img: "img/caja11.png", categoria: "Cajitas"},
         ],
         matrimonio: [
-            {id: 42, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri1.png", categoria: "Matrimonio"},
-            {id: 43, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri2.png", categoria: "Matrimonio"},
-            {id: 44, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri3.png", categoria: "Matrimonio"},
-            {id: 45, nombre: "Ramos 10 varas", precio: 35000, img: "img/ramos-florales.png", categoria: "Matrimonio"}
+            {id: 43, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri1.png", categoria: "Matrimonio"},
+            {id: 44, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri2.png", categoria: "Matrimonio"},
+            {id: 45, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri3.png", categoria: "Matrimonio"},
+            {id: 46, nombre: "Ramos 10 varas", precio: 35000, img: "img/ramos-florales.png", categoria: "Matrimonio"}
         ]
     };
 
