--- a/catalogo.html
+++ b/catalogo.html
@@ -172,7 +172,7 @@
             {id: 31, nombre: "Arreglo 8 varas + follaje", precio: 25000, img: "img/condo10.png", categoria: "Condolencias"},
         ],
         cajitas: [
-            {id: 32, nombre: "Cajita Ternura", precio: 30000, img: "img/caja1.png", categoria: "Cajitas"},
+            {id: 32, nombre: "Un detalle de otro mundo: Flores + Stitch.", precio: 30000, img: "img/caja1.png", categoria: "Cajitas"},
             {id: 33, nombre: "Canasta hello Kitty", precio: 15000, img: "img/caja2.png", categoria: "Cajitas"},
             {id: 34, nombre: "Cajita Stitch mediano y Rosas", precio: 30000, img: "img/caja3.png", categoria: "Cajitas"},
             {id: 35, nombre: "Cajita Grande Hello Kitty en Jardín de flores", precio: 45000, img: "img/caja4.png", categoria: "Cajitas"},
@@ -182,7 +182,7 @@
             {id: 39, nombre: "Cajita Stitch mediano", precio: 30000, img: "img/caja8.png", categoria: "Cajitas"},
             {id: 40, nombre: "Cajita Angela y Rosa", precio: 30000, img: "img/caja9.png", categoria: "Cajitas"},
             {id: 41, nombre: "Cajita Stitch y rosas + chocolate", precio: 35000, img: "img/caja10.png", categoria: "Cajitas"},
-            {id: 42, nombre: "Cajita Stitch y rosas + chocolate", precio: 32000, img: "img/caja11.png", categoria: "Cajitas"},
+            {id: 42, nombre: "Mix de Ternura: Para los que aman los dulces y los abrazos.", precio: 32000, img: "img/caja11.png", categoria: "Cajitas"},
         ],
         matrimonio: [
             {id: 43, nombre: "Ramos 10 varas", precio: 35000, img: "img/matri1.png", categoria: "Matrimonio"},
